--- a/src/style.css
+++ b/src/style.css
@@ -1,11 +1,20 @@
+@font-face {
+  font-family: Lixeld;
+  src: url("/font/lixeld.ttf");
+}
+
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  --f-default: Lixeld, Consolas, Inconsolata, Ubuntu, 'Noto Sans JP', 'M PLUS Rounded 1c', monospace;
+}
+
+:root {
+  font-family: var(--f-default);
   line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: white;
+  background-color: #000000;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
