--- a/src/style.css
+++ b/src/style.css
@@ -28,6 +28,11 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+/* Easings */
+:root {
+  --ease-out-expo: cubic-bezier(0.16, 1, 0.3, 1);
+}
+
 body {
   margin: 0;
   display: flex;
